Update schema and data access functionality
