# model/closet_entry_model.py
@@ -1,5 +1,6 @@
 class ClosetEntry:
-    def __init__(self, filename: str, object_key: str, category: str):
+    def __init__(self, filename: str, bucket_name: str, object_key: str, category: str):
         self.filename = filename
+        self.bucket_name = bucket_name
         self.object_key = object_key
         self.category = category
