# model/closet_model.py
@@ -1,7 +1,7 @@
 class Closet:
     closet_name = ""
-    closet_entries = []
+    closet_id = 0
 
-    def __init__(self, closet_name: str, closet_entries):
+    def __init__(self, closet_id: int, closet_name: str):
+        self.closet_id = closet_id
         self.closet_name = closet_name
-        self.closet_entries = closet_entries
